# Shakespeare

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
.scratch/spl-interpreter/issues/: 01-multiline-comments-break-parsing.md  02-implement-stacks.md  03-richer-comparatives.md  04-remaining-reference-programs.md  05-package-data-for-wheel.md  06-differential-ci-testing.md  07-goto-target-scope.md  08-division-sign-convention.md  09-input-error-semantics.md  10-conditional-without-question.md  11-write-readme.md  12-articled-character-names.md  13-negated-question-drops-negation.md  14-breakpoints-dropped-from-ast.md  15-more-neutral-adjective-comparative.md  16-read-number-crlf-handling.md  17-recall-comment-executes-statements.md  18-articled-name-determiner-mismatch.md  19-title-question-mark-terminator.md  20-name-article-absorbs-a-an.md  21-read-number-discards-char-on-error.md  22-stale-question-branch-docstring.md  23-implement-factorial-operator.md  24-readme-stale-not-inversion-claim.md  25-noun-adjective-polarity-not-enforced.md  26-record-comparison-conditional-supersets.md  27-large-integer-output-crashes-unwrapped.md  README.md
docs/: gap-analysis.md
docs/adr/: 0001-strict-semantics-for-undefined-cases.md  0002-parsing-strategy-generic-word.md  0003-input-parsing-and-error-semantics.md  0004-comparison-conformance.md  0005-title-section-label-terminators.md  0006-conformance-baseline-and-spec-divergences.md  0007-recorded-grammar-supersets-over-the-reference.md  0008-pyodide-in-browser-for-web-playground.md  0009-interactive-stdin-via-sharedarraybuffer.md  0010-polyglot-src-layout-and-web-ci-gating.md
docs/agents/: domain.md  triage-labels.md
src/spl/: __init__.py  __main__.py  cli.py  errors.py
src/spl/backend/: __init__.py  analyzer.py  interpreter.py  io.py  state.py  vocabulary.py
src/spl/backend/data/: adjectives.txt  character_names.txt  neutral_nouns.txt  positive_nouns.txt
src/spl/frontend/: __init__.py  ast.py  grammar.lark  parser.py  transformer.py
src/web/: .gitignore  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
src/web/e2e/: playground.spec.ts
src/web/scripts/: prepare-assets.mjs
src/web/src/: App.tsx  examples.test.ts  main.tsx  protocol.ts  runner.test.ts  runner.ts  spl-test-hooks.d.ts  styles.css  worker.ts
tests/: test_cli.py  test_differential.py  test_errors.py  test_programs.py
tests/backend/: test_analyzer.py  test_interpreter.py  test_io.py  test_state.py  test_vocabulary.py
tests/frontend/: test_parser.py
tests/programs/: echo.in  echo.out  greeting.spl  primes.out  sierpinski.out
web/: .gitignore  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: playground.spec.ts
web/scripts/: prepare-assets.mjs
web/src/: App.tsx  examples.ts  runner.ts  styles.css  worker.ts
