[project]
name = "spl"
version = "0.1.0"
description = "A typed-Python interpreter for the Shakespeare Programming Language"
readme = "README.md"
authors = [
    { name = "Yao Li", email = "hnkfliyao@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "lark>=1.1",
]

[project.scripts]
spl = "spl.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# The interpreter loads two kinds of non-Python data at runtime: the Lark grammar
# (spl/frontend/grammar.lark) and the vocabulary word-lists (spl/backend/data/*.txt).
# uv_build packages files in the module root into the wheel automatically, but the source
# distribution only ships them when listed here. Declaring them explicitly keeps both
# artifacts in sync and documents that these globs are load-bearing package data.
# Patterns are anchored at the project root, so they include the `src/` prefix.
source-include = [
    "src/spl/frontend/*.lark",
    "src/spl/backend/data/*.txt",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[tool.ruff]
target-version = "py313"
# This is ruff's **import-resolution** root (isort first-party detection), NOT the lint surface.
# Leaving it as src/ keeps "spl" classified as first-party. The lint surface is narrowed instead
# via the CLI args in ci.yml (`ruff check src/spl tests`) — see ADR-0010.
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
# Post-ADR-0010 src/ is polyglot; scope pyright to the Python package only.
include = ["src/spl", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# Deselect the opt-in differential suite by default so `uv run pytest` stays reference-free and
# never imports shakespearelang. Run it explicitly with `uv run --with shakespearelang pytest -m
# differential`.
addopts = "-q -m 'not differential'"
markers = [
    "differential: cross-check our interpreter against the shakespearelang oracle (opt-in; needs `--with shakespearelang`)",
]

[tool.coverage.run]
# Coverage is measured on the reference-free default suite only and reported to Codecov
# (report-only). The opt-in differential suite re-runs the same programs through the same code
# (test_differential.py `_run_ours` == test_programs.py `_run`; the oracle is a subprocess), so it
# adds zero marginal coverage and is intentionally not measured. `--cov` is passed in CI, not in
# addopts, so local `pytest` stays fast; run `uv run pytest --cov` for an ad-hoc local number.
source = ["spl"]
branch = true
omit = ["*/spl/__main__.py"]  # pure `python -m spl` shim; the __main__ guard is untestable in-process

[tool.coverage.report]
show_missing = true
precision = 1
